    didn't exist. Fixed.

0.6.1:
  - tag_id cache wasn't invalidated when a tag was renamed. Fixed.
    Thanks to Chiffa for reporting the bug.

  - tagsistant_guess_inode_from_and_set() didn't check object existence
    using a proper SQL query. Fixed by adding multiple condition, one
	for each AND-set, and using group by on object.inode.

0.6:
  - Removed do_reasoning argument from tagsistant_querytree_new(), being
    obsoleted by the '@@' operator.

  - Solved two bugs in deduplication which prevented real unlink() of the
    file from disk and leaved the old inode stored in AND_SET cache.

0.6 rc6:
  - Implemented no reasoning ending tag "@@" which prevents the reasoner
    from being called. Only objects with direct tagging will be returned
	as query results. Very useful while doing housekeeping of the archive,
	moving files in subtags. A new constant has been defined in tagsistant.h:

	  #define TAGSISTANT_QUERY_DELIMITER_NO_REASONING "@@"

	and its value is reported by stats/configuration.
	
  - Added tagsistant_querytree_check_tagging_consistency() call to:
      src/fuse_operations/rmdir.c
      src/fuse_operations/release.c
      src/fuse_operations/flush.c
      src/fuse_operations/unlink.c

  - Changed tagsistant_rename() to return EXDEV if both from and to paths
    are not taggable. This will cause calling program to use
    open-read/write-close cycle to copy files. This is required if you
    are moving myfiles/tags/t1/@/directory/files* to myfiles/tags/t2/@/
    because source files* are not tagsistant managed objects (hence
    is_taggable is 0).

0.6 rc5:
  - Fixed a bug in src/fuse_operations/readdir.c which caused the inclusion
    of '@' and '+' even after a '+/' ending path.

  - fixed a bug in mkdir() which used tagsistant_create_and_tag_object() in
    place of tagsistant_force_create_and_tag_object()

  - reduced reasoner SQL queries

  - enabled some caches, properly working
