@@ -89,10 +89,12 @@ int tagsistant_getattr(const char *path, struct stat *stbuf)
 
 	// -- stats --
 	else if (QTREE_IS_STATS(qtree)) {
-		if (g_regex_match_simple("stats/(connections|cached_queries|configuration|objects|relations|tags)$", path, 0, 0))
+		if (g_regex_match_simple("^/stats/(connections|cached_queries|configuration|objects|relations|tags)$", path, 0, 0))
 			lstat_path = tagsistant.tags;
-		else
+		else if (g_regex_match_simple("^/stats$", path, 0, 0))
 			lstat_path = tagsistant.archive;
+		else
+			TAGSISTANT_ABORT_OPERATION(ENOENT);
 	}
 
 	// -- tags (incomplete) --
